Linecaps wrong for zero length lines https://bugs.webkit.org/show_bug.cgi?id=71820

Patch by Stephen Chenney <schenney@chromium.org> on 2012-01-25
Reviewed by Nikolas Zimmermann.

Total reworking of the method used to draw zero-length linecaps for
SVG. This patch works for all zero length sub-paths.

Source/WebCore:

Tests: svg/stroke/zero-length-path-linecap-rendering.svg
       svg/stroke/zero-length-subpaths-linecap-rendering.svg

* rendering/svg/RenderSVGShape.cpp: Significant refactoring to enable
  new implementation and clarify code.
(WebCore::RenderSVGShape::createShape):
(WebCore::RenderSVGShape::strokeContains):
(WebCore::RenderSVGShape::shouldStrokeZeroLengthSubpath):
(WebCore::RenderSVGShape::zeroLengthSubpathRect):
(WebCore::RenderSVGShape::zeroLengthLinecapPath):
(WebCore::RenderSVGShape::nonScalingStrokePath):
(WebCore::RenderSVGShape::setupNonScalingStrokeTransform):
(WebCore::RenderSVGShape::fillShape):
(WebCore::RenderSVGShape::strokePath):
(WebCore::RenderSVGShape::fillAndStrokePath):
(WebCore::RenderSVGShape::updateCachedBoundaries):
(WebCore::RenderSVGShape::processZeroLengthSubpaths):
* rendering/svg/RenderSVGShape.h: Declarations for new methods.
* rendering/svg/SVGSubpathData.h: Class for finding zero length subpaths.
* svg/SVGPathBuilder.h: Fix typos
* svg/SVGPathConsumer.h: Fix typos
* svg/SVGPathSegListBuilder.h: Fix typos
* svg/SVGPathTraversalStateBuilder.h: Fix typos

LayoutTests:

* platform/chromium/test_expectations.txt: Chromium test expectations
pending new expected images and text.
* platform/mac/svg/stroke/zero-length-path-linecap-rendering-expected.png: Added.
* platform/mac/svg/stroke/zero-length-path-linecap-rendering-expected.txt: Added.
* platform/mac/svg/stroke/zero-length-subpaths-linecap-rendering-expected.png: Added.
* platform/mac/svg/stroke/zero-length-subpaths-linecap-rendering-expected.txt: Added.
* platform/mac/test_expectations.txt: Chromium test expectations
pending new expected images and text.
* svg/stroke/zero-length-path-linecap-rendering.svg: Added.
* svg/stroke/zero-length-subpaths-linecap-rendering.svg: Added.

Canonical link: https://commits.webkit.org/93881@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105878 268f45cc-cd09-0410-ab3c-d52691b4dbfc