Source/WebCore/svg/SVGPathBuilder.h
@@ -42,7 +42,7 @@ private:
     virtual bool continueConsuming() { return true; }
     virtual void cleanup() { m_path = 0; }
 
-    // Used in UnalteredParisng/NormalizedParsing modes.
+    // Used in UnalteredParsing/NormalizedParsing modes.
     virtual void moveTo(const FloatPoint&, bool closed, PathCoordinateMode);
     virtual void lineTo(const FloatPoint&, PathCoordinateMode);
     virtual void curveToCubic(const FloatPoint&, const FloatPoint&, const FloatPoint&, PathCoordinateMode);
