Source/WebCore/svg/SVGPathTraversalStateBuilder.h
@@ -43,7 +43,7 @@ public:
     virtual void cleanup() { m_traversalState = 0; }
 
 private:
-    // Used in UnalteredParisng/NormalizedParsing modes.
+    // Used in UnalteredParsing/NormalizedParsing modes.
     virtual void moveTo(const FloatPoint&, bool closed, PathCoordinateMode);
     virtual void lineTo(const FloatPoint&, PathCoordinateMode);
     virtual void curveToCubic(const FloatPoint&, const FloatPoint&, const FloatPoint&, PathCoordinateMode);
